removed unused components

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       content="News from The New York Times"
     />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text&family=Montserrat&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto+Slab&display=swap" rel="stylesheet">
     <title>News App</title>
   </head>
   <body>
